# SPDX-License-Identifier: GPL-2.0-or-later

add_library(nor STATIC)

target_sources(nor PRIVATE
	core.c
	tcl.c
	aduc702x.c
	aducm360.c
	ambiqmicro.c
	at91sam4.c
	at91sam4l.c
	at91samd.c
	at91sam3.c
	at91sam7.c
	ath79.c
	atsamv.c
	atsame5.c
	avrf.c
	bluenrg-x.c
	cc3220sf.c
	cc26xx.c
	cfi.c
	dsp5680xx_flash.c
	dw-spi.c
	efm32.c
	em357.c
	eneispif.c
	esp_flash.c
	esp_xtensa.c
	esp_riscv.c
	esp32.c
	esp32s2.c
	esp32c2.c
	esp32c3.c
	esp32s3.c
	esp32c5.c
	esp32c6.c
	esp32c61.c
	esp32h2.c
	esp32p4.c
	esirisc_flash.c
	faux.c
	fespi.c
	fm3.c
	fm4.c
	jtagspi.c
	kinetis.c
	kinetis_ke.c
	lpc2000.c
	lpc288x.c
	lpc2900.c
	lpcspifi.c
	max32xxx.c
	mdr.c
	msp432.c
	mrvlqspi.c
	mspm0.c
	niietcm4.c
	non_cfi.c
	npcx.c
	nrf5.c
	numicro.c
	ocl.c
	pic32mx.c
	psoc4.c
	psoc5lp.c
	psoc6.c
	qn908x.c
	renesas_rpchf.c
	rp2040.c
	rsl10.c
	sfdp.c
	sh_qspi.c
	sim3x.c
	spi.c
	stmsmi.c
	stmqspi.c
	stellaris.c
	stm32f1x.c
	stm32f2x.c
	stm32lx.c
	stm32l4x.c
	stm32h7x.c
	str7x.c
	str9x.c
	str9xpec.c
	swm050.c
	tms470.c
	virtual.c
	w600.c
	xcf.c
	xmc1xxx.c
	xmc4xxx.c
	drivers.c
	core.h
	cc3220sf.h
	bluenrg-x.h
	cc26xx.h
	cfi.h
	driver.h
	imp.h
	non_cfi.h
	ocl.h
	sfdp.h
	spi.h
	stm32l4x.h
	stmqspi.h
	msp432.h
)

target_link_libraries(nor PRIVATE helper)
