noinst_LTLIBRARIES += %D%/libocdflashnor.la
%C%_libocdflashnor_la_SOURCES = \
	%D%/core.c \
	%D%/tcl.c \
	$(NOR_DRIVERS) \
	%D%/drivers.c \
	$(NORHEADERS)

NOR_DRIVERS = \
	%D%/aduc702x.c \
	%D%/aducm360.c \
	%D%/ambiqmicro.c \
	%D%/at91sam4.c \
	%D%/at91sam4l.c \
	%D%/at91samd.c \
	%D%/at91sam3.c \
	%D%/at91sam7.c \
	%D%/ath79.c \
	%D%/atsamv.c \
	%D%/atsame5.c \
	%D%/avrf.c \
	%D%/bluenrg-x.c \
	%D%/cc3220sf.c \
	%D%/cc26xx.c \
	%D%/cfi.c \
	%D%/dsp5680xx_flash.c \
	%D%/efm32.c \
	%D%/em357.c \
	%D%/esirisc_flash.c \
	%D%/faux.c \
	%D%/fespi.c \
	%D%/fm3.c \
	%D%/fm4.c \
	%D%/jtagspi.c \
	%D%/kinetis.c \
	%D%/kinetis_ke.c \
	%D%/lpc2000.c \
	%D%/lpc288x.c \
	%D%/lpc2900.c \
	%D%/lpcspifi.c \
	%D%/max32xxx.c \
	%D%/mdr.c \
	%D%/msp432.c \
	%D%/mrvlqspi.c \
	%D%/niietcm4.c \
	%D%/non_cfi.c \
	%D%/nrf5.c \
	%D%/numicro.c \
	%D%/ocl.c \
	%D%/pic32mx.c \
	%D%/psoc4.c \
	%D%/psoc5lp.c \
	%D%/psoc6.c \
	%D%/renesas_rpchf.c \
	%D%/rp2040.c \
	%D%/sfdp.c \
	%D%/sh_qspi.c \
	%D%/sim3x.c \
	%D%/spi.c \
	%D%/stmsmi.c \
	%D%/stmqspi.c \
	%D%/stellaris.c \
	%D%/stm32f1x.c \
	%D%/stm32f2x.c \
	%D%/stm32lx.c \
	%D%/stm32l4x.c \
	%D%/stm32h7x.c \
	%D%/str7x.c \
	%D%/str9x.c \
	%D%/str9xpec.c \
	%D%/swm050.c \
	%D%/tms470.c \
	%D%/virtual.c \
	%D%/w600.c \
	%D%/xcf.c \
	%D%/xmc1xxx.c \
	%D%/xmc4xxx.c

NORHEADERS = \
	%D%/core.h \
	%D%/cc3220sf.h \
	%D%/bluenrg-x.h \
	%D%/cc26xx.h \
	%D%/cfi.h \
	%D%/driver.h \
	%D%/imp.h \
	%D%/non_cfi.h \
	%D%/ocl.h \
	%D%/sfdp.h \
	%D%/spi.h \
	%D%/stm32l4x.h \
	%D%/stmqspi.h \
	%D%/msp432.h
